[package]
name = "hello-wasm"
version = "0.1.0"
authors = ["Kanaru Sato<kanakanarunrun@gmail.com>"]
description = "sample for wasm"
repository = "https://github.com/canalun/wasm_trial"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["cdylib"]

[dependencies]
wasm-bindgen = "0.2"